--- a/index.html
+++ b/index.html
@@ -1,152 +1,164 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume - Ben</title>
+    <link  
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap"
+        rel="stylesheet"
+    />
+    <link rel="stylesheet" href="flex1.css">
+</head>
+<body>
+    <div class="container">
+        <header class="header">
+            <h1>Benhar Kumar</h1>
+            <p>Full Stack Developer</p>
+        </header>
+        <div class="content">
+            <!-- Left Column -->
+            <div class="left-column">
+                <section class="contact">
+                    <h2>Contact</h2>
+                    <ul>
+                        <li>+1 513-302-5059</li>
+                        <li>Ben@email.com</li>
+                        <li>Ohio, Cincinnati</li>
+                        <li>www.ben.com</li>
+                    </ul>
+                </section>
 
-body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #f4f4f4;
-    padding: 20px;
-}
+                <section class="education">
+                    <h2>Education</h2>
+                    <p>
+                        <strong>2017 - 2021</strong> <br />
+                        Bachelors in Electronics and Communication <br />
+                        Anits college
+                    </p>
+                </section>
 
-.container {
-    max-width: 900px;
-    margin: 0 auto;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-}
+                <section class="skills">
+                    <h2>Skills</h2>
+                    <ul>
+                        <li>Web development</li>
+                        <li>Project management</li>
+                        <li>Digital Marketing</li>
+                        <li>Data Analysis</li>
+                    </ul>
+                </section>
 
-.header {
-    text-align: center;
-    padding-bottom: 20px;
-    border-bottom: 2px solid #e0e0e0;
-}
+                <section class="languages">
+                    <h2>Languages</h2>
+                    <ul>
+                        <li>English</li>
+                        <li>Telugu</li>
+                    </ul>
+                </section>
+            </div>
 
-.header h1 {
-    font-size: 2.5rem;
-    font-weight: 700;
-    color: #003366;
-}
+            <!-- Right Column -->
+            <div class="right-column">
+                <section class="profile-summary">
+                    <h2>Profile Summary</h2>
+                    <p>
+                        Full Stack Developer with a passion for creating dynamic and
+                        responsive web applications. Proficient in both front-end and
+                        back-end technologies including JavaScript, React, Node.js,
+                        Express, and MongoDB. Adept at building scalable, efficient, and
+                        user-friendly solutions.
+                    </p>
+                </section>
 
-.header p {
-    font-size: 1.2rem;
-    color: #666;
-}
+                <section class="work-experience">
+                    <h2>Work Experience</h2>
+                    <div class="job">
+                        <h3>Web Developer</h3>
+                        <p><strong>2020 - 2022</strong></p>
+                        <p>Accenture</p>
+                        <ul>
+                            <li>
+                                Developed and executed digital marketing strategies leading to
+                                a 15% growth in organic website traffic.
+                            </li>
+                            <li>
+                                Collaborated with the content team to create SEO-optimized
+                                content, increasing search engine rankings.
+                            </li>
+                        </ul>
+                    </div>
+                </section>
 
-.content {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-}
+                <!-- Form Section at the Bottom -->
+                <section class="contact-form">
+                    <h2>Register</h2>
+                    <form>
+                        <!-- Name -->
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
 
-.left-column {
-    width: 30%;
-}
+                        <!-- Username -->
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" name="username" required>
 
-.contact,
-.education,
-.skills,
-.languages {
-    margin-bottom: 20px;
-}
+                        <!-- Email -->
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
 
-h2 {
-    font-size: 1.5rem;
-    color: #003366;
-    margin-bottom: 10px;
-}
+                        <!-- Password -->
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" required>
 
-ul {
-    list-style: none;
-    padding-left: 0;
-}
+                        <!-- Confirm Password -->
+                        <label for="confirm_password">Confirm Password:</label>
+                        <input type="password" id="confirm_password" name="confirm_password" required>
 
-ul li {
-    margin-bottom: 5px;
-    font-size: 1rem;
-    color: #333;
-}
+                        <!-- Country Code and Phone Number -->
+                        <label for="country_code">Country Code:</label>
+                        <select id="country_code" name="country_code" required>
+                            <option value="+1">+1 (USA)</option>
+                            <option value="+44">+44 (UK)</option>
+                            <option value="+91">+91 (India)</option>
+                        </select>
 
-/* Right Column */
-.right-column {
-    width: 65%;
-}
+                        <label for="phone">Phone Number:</label>
+                        <input type="tel" id="phone" name="phone" required>
 
-.profile-summary p {
-    margin-bottom: 20px;
-    font-size: 1rem;
-    line-height: 1.6;
-    color: #555;
-}
+                        <!-- Date of Birth -->
+                        <label for="dob">Date of Birth:</label>
+                        <input type="date" id="dob" name="dob" max="2004-11-03" required>
 
-.work-experience .job {
-    margin-bottom: 20px;
-}
+                        <!-- Gender -->
+                        <label>Gender:</label>
+                        <div class="radio-group">
+                            <label><input type="radio" name="gender" value="Male" required> Male</label>
+                            <label><input type="radio" name="gender" value="Female"> Female</label>
+                            <label><input type="radio" name="gender" value="Prefer not to say"> Prefer not to say</label>
+                        </div>
 
-.job h3 {
-    font-size: 1.2rem;
-    color: #003366;
-}
+                        <!-- Hobbies -->
+                        <label>Hobbies:</label>
+                        <div class="checkbox-group">
+                            <label><input type="checkbox" name="hobby_reading" value="Reading"> Reading</label>
+                            <label><input type="checkbox" name="hobby_sports" value="Sports"> Sports</label>
+                            <label><input type="checkbox" name="hobby_music" value="Music"> Music</label>
+                            <label><input type="checkbox" name="hobby_traveling" value="Traveling"> Traveling</label>
+                        </div>
 
-.job p {
-    font-size: 1rem;
-    color: #666;
-}
+                        <!-- Upload Button -->
+                        <label for="profile_picture">Upload Profile Picture:</label>
+                        <input type="file" id="profile_picture" name="profile_picture" accept="image/*">
 
-.job ul {
-    margin-top: 10px;
-}
+                        <!-- Message Box -->
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="4" placeholder="Write a message..."></textarea>
 
-.job ul li {
-    font-size: 1rem;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-/* Form Styling */
-.contact-form label {
-    font-size: 1rem;
-    color: #333;
-    margin-top: 10px;
-}
-
-.contact-form input,
-.contact-form select,
-.contact-form textarea {
-    padding: 8px;
-    font-size: 1rem;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 100%;
-}
-
-.contact-form textarea {
-    resize: vertical;
-    font-family: 'Roboto', sans-serif;
-}
-
-.radio-group,
-.checkbox-group {
-    display: flex;
-    gap: 10px;
-    margin-top: 5px;
-}
-
-.contact-form button {
-    margin-top: 15px;
-    padding: 10px;
-    font-size: 1rem;
-    color: white;
-    background-color: #003366;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.contact-form button:hover {
-    background-color: #002244;
-}
+                        <!-- Submit Button -->
+                        <button type="submit">Register</button>
+                    </form>
+                </section>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
